# payment-system-backend

./: alembic.ini  docker-compose.yml  pyproject.toml
src/: .env.sample  main.py
src/api/: deps.py
src/api/v1/routes/: accounts.py  auth.py  payments.py  users.py
src/api/v1/schemas/: account.py  payment.py  user.py
src/application/services/: account.py  auth.py  base.py  cache.py  payment.py  user.py
src/config/: config.py
src/core/: logger.py
src/domain/models/: __init__.py  account.py  payment.py  user.py
src/infrastructure/: cache.py  database.py
src/infrastructure/migrations/: env.py
src/infrastructure/migrations/versions/: 2025_02_21_0044-ccdcd9fa29b9_initial_migration.py
src/infrastructure/repositories/: account.py  base.py  payment.py  user.py
tests/: conftest.py
tests/unit/application/services/: test_auth.py  test_payment.py
