[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.7.1"
sqlalchemy = "^2.0.38"
python-jose = "^3.3.0"
passlib = "^1.7.4"
fastapi = "^0.115.8"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
pydantic = { extras = ["email"], version = "^2.10.6" }
asyncpg = "^0.30.0"
python-multipart = "^0.0.20"
alembic = "^1.14.1"
bcrypt = "^4.2.1"
loguru = "^0.7.3"
redis = "^5.2.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"
asyncmock = "^0.4.2"
fakeredis = "^2.27.0"
sqlalchemy-utils = "^0.41.2"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=html --cov-fail-under=90 -v"
testpaths = ["tests"]